samples/_failures_safe/1761316687_0c37a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d6636d2.c: In function ‘main’:
./samples/SAFE/__tmp_3d6636d2.c:170:5: error: expected declaration or statement at end of input
  170 |     printf("Enter starting node (0-5): ");
      |     ^~~~~~
